@@ -1,1 +1,12 @@
 # 2주차 학습 내용
+과제를 완벽하게 하지 못했습니다.
+함수를 최대한 작게 만드려고 노력했는데 클래스 구분을 잘 못한 것 같고 매직넘버도 너무 많은 것 같고 많이 부족한 거 같습니다.
+솔직히 GPT 많이 썼고 인터넷에 올라와 있는거나 이전 COW 사람들이 올린 PR 보면서 해본다고 해봤는데 많이 부족한거 같네요 앞으로 공부 더 열심히 하겠습니다.
+JDK 버전도 11로 맞춰두고 했는데 제 컴퓨터에선 작동엔 문제가 없는데 계속해서
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by camp.nextstep.edu.missionutils.Console (file:/C:/Users/lc011/.gradle/caches/modules-2/files-2.1/com.github.woowacourse-projects/mission-utils/1.0.0/dad5230ec970560465a42a1cade24166e6a424f4/mission-utils-1.0.0.jar) to field java.util.Scanner.sourceClosed
+WARNING: Please consider reporting this to the maintainers of camp.nextstep.edu.missionutils.Console
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+이런 오류가 뜨네요 찾아보니까 자바 9이상에서 발생하는 스캐너 관련 오류 인거 같은데 실행에 문제 없으면 무시해도 된다고 해서 일단 제출해봅니다.
+열심히 하겠습니다.
